feat: limpiando codigo de codigo sin usar

--- a/client/index.html
+++ b/client/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="form">
-        <h1>API UNI - CODIFICADOR</h1>
+        <h1 style="font-weight: bold;">CLASIF.AI</h1>
         <div id="qrcode-container">
             <img src="./assets/loader.gif" alt="loading" id="qrcode" style="width: 250px;">
         </div>
