--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,23 @@
         body {
             background: rgb(200, 220, 224);
         }
+
+        .header {
+            background: #03773f;
+            padding: 20px 0;
+            text-align: center;
+            color: #fff;
+            margin: -16px -16px 16px -16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .header img {
+            height: 40px;
+            /* Si el logo es oscuro y no se ve bien sobre el fondo verde */
+            filter: brightness(0) invert(1); /* Esto hará el logo blanco si es necesario */
+        }
         
         .form {
             font-family: Helvetica, sans-serif;
@@ -69,7 +86,9 @@
 </head>
 <body>
     <div class="form">
-        <h1 style="font-weight: bold;">CLASIF.AI</h1>
+        <div class="header">
+            <img src="./assets/logo.png" alt="CLASIF.AI" style="height: 40px;">
+        </div>
         <div id="qrcode-container">
             <img src="./assets/loader.gif" alt="loading" id="qrcode" style="width: 250px;">
         </div>
