fix: Modificación de distancia entre el logo y el texto

--- a/client/prototype-groups.html
+++ b/client/prototype-groups.html
@@ -35,7 +35,7 @@
       .logo-section {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 2px;
       }
 
       .logo {
@@ -268,7 +268,7 @@
             <img
               src="./assets/logo-sm.png"
               alt="CLASIF.AI"
-              style="height: 40px"
+              style="height: 40px; margin-right: 0"
             />
             <div>HATS</div>
           </div>
@@ -322,7 +322,7 @@
               <img
                 src="./assets/logo-sm.png"
                 alt="CLASIF.AI"
-                style="height: 40px"
+                style="height: 40px; margin-right: 0"
               />
               <div>HATS TEMATIZADOS</div>
             </div>
