fix: Reduccion a un 0.3px esa sección de logo

--- a/client/prototype-groups.html
+++ b/client/prototype-groups.html
@@ -35,7 +35,7 @@
       .logo-section {
         display: flex;
         align-items: center;
-        gap: 1px;
+        gap: 0.3;
       }
 
       .logo {
